<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/mhome_profilo"
          android:id="@+id/mhome_view_profile"
          android:enabled="true"
          android:icon="@drawable/ic_action_profile"
          android:titleCondensed="@string/mhome_profilo"
          app:showAsAction="always"
          android:visible="true"
          android:orderInCategory="1"
          android:menuCategory="container"/>
    <item android:title="@string/mhome_disconnect"
          android:id="@+id/mhome_disconnect"
          android:enabled="true"
          android:titleCondensed="@string/mhome_profilo"
          app:showAsAction="never"
          android:visible="true"
          android:orderInCategory="2"
          android:menuCategory="container"/>
    <item android:title="@string/mhome_esci"
          android:id="@+id/mhome_exit"
          android:enabled="true"
          app:showAsAction="never"
          android:titleCondensed="@string/mhome_esci"
          android:visible="true"
        android:orderInCategory="3"
        android:menuCategory="container"/>
</menu>