<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/catalogue_sort_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/sort_filter_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_popular_label"/>
        <RadioButton
            android:id="@+id/sort_filter_similar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_similar_label"/>
        <RadioButton
            android:id="@+id/sort_filter_alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_alpha_label" />
    </RadioGroup>

    <ListView
        android:id="@+id/catalogue_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>


</LinearLayout>