<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
        style="@style/CustomItemTextViewStyle"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/auth_txt_form"
        />

    <Button
        android:id="@+id/authBtn"
        style="@style/CustomButtonViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_send_password_reset_email"
        android:textStyle="bold"
        android:textSize="@dimen/auth_btn_form"/>
    <Button
        android:id="@+id/authResetBtn"
        style="@style/CustomButtonViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_sign_reset"
        android:textStyle="bold"
        android:textSize="@dimen/auth_btn_form"/>

</merge>