<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/allFieldsContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="right"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lbl_profile_username"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/lbl_min_size"
                android:maxLines="1"/>
            <EditText
                style="@style/CustomItemTextViewStyle"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/auth_txt_form"
                >
                <requestFocus/>
                </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_nome"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/lbl_min_size"
                android:maxLines="1"/>
            <EditText
                style="@style/CustomItemTextViewStyle"
                android:id="@+id/nomeAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint_nome"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:inputType="textAutoComplete"
                android:textSize="@dimen/auth_txt_form"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_birthDate"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/lbl_min_size"
                android:maxLines="1"/>
            <EditText
                style="@style/CustomItemTextViewStyle"
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint_birthdate"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:inputType="textAutoComplete|number"
                android:textSize="@dimen/auth_txt_form"
                android:maxLength="4"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_pref_corsi"
                android:gravity="center"/>
            <android.support.v7.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/marginBase"
                android:layout_marginRight="@dimen/marginBase"
                android:layout_marginBottom="@dimen/marginBase"
                android:background="@drawable/deliner_forms_auth_thin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_sigla_prov"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/lbl_min_size"
                android:maxLines="1"/>
            <AutoCompleteTextView
                style="@style/CustomItemTextViewStyle"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocompleteProvincia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint_provincia"
                android:completionHint="Provincia"
                android:imeOptions="actionNext"
                android:completionThreshold="1"
                android:inputType="textAutoComplete"
                android:nextFocusForward="@+id/autocompleteComune"
                android:textSize="@dimen/auth_txt_form"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_comune"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/lbl_min_size"
                android:maxLines="1"/>
            <AutoCompleteTextView
                style="@style/CustomItemTextViewStyle"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocompleteComune"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint_comune"
                android:completionHint="Comune"
                android:imeOptions="actionDone"
                android:completionThreshold="2"
                android:inputType="textAutoComplete"
                android:textSize="@dimen/auth_txt_form"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_pref_funghi"
                android:gravity="center"/>
            <android.support.v7.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/marginBase"
                android:layout_marginRight="@dimen/marginBase"
                android:layout_marginBottom="@dimen/marginBase"
                android:background="@drawable/deliner_forms_auth_thin">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/galletti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:drawableTint="@color/x_blue"
                    android:text="galletti"
                    android:checked="false"
                    android:background="@drawable/trasp"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/ovulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:drawableTint="@color/x_blue"
                        android:text="ovulo"
                        android:checked="false"
                        android:background="@drawable/trasp"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/porcino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:drawableTint="@color/x_blue"
                        android:text="porcino"
                        android:checked="false"
                        android:background="@drawable/trasp"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/russola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:drawableTint="@color/x_blue"
                    android:text="russola"
                    android:checked="false"
                    android:background="@drawable/trasp"/>
                <EditText
                    style="@style/CustomItemTextViewStyle"
                    android:id="@+id/others"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginBase"
                    android:hint="@string/prompt_hint_others"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine|textAutoComplete"
                    android:textSize="@dimen/auth_txt_form"
                    android:lines="2"
                    android:maxLines="2"
                    android:maxLength="40"
                    />
            </android.support.v7.widget.LinearLayoutCompat>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <trova.funghi.widget.SplashscreenLoadingBar
        android:id="@+id/authProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</merge>